# dnaZyme

./: .gitignore  README.md  plots.py  pyproject.toml  requirements.txt  run_model.py
app/: set_up_env.py
app/data/: align_trend_seq.fasta  aligned_sequences.csv  aligned_sequences.fasta  aligned_sequences_copy.fasta  almudena_dnazymes_doi.xlsx  clean_align_seq.fasta  clean_align_trend_seq.csv  clean_align_trend_seq.fasta  clean_seq.fasta  dnazymes_v2_buffer_and_arms.xlsx  preprocessed_dataset.xlsx  sequence_tree.dnd  sequences.fasta  test.fasta  view_sequence.csv
app/tests/: counter_test.py  run_counter_tests.py
app/tmp/: plots.py  read_fasta.py  sequence_analysis.ipynb  test.py
app/tools/: __init__.py  biotite_graph.py  counter.py  example_seq.txt  filted_seq.txt  msa_viz.py  plot_sequence_stats.py  plot_tree.py  seq_funcs.py  sequence_alignment.py  sequence_analysis.py
data/: db_dnazymes.csv  db_dnazymes_features_v2.csv  db_dnazymes_v2.csv  test_sample.csv
utils/: __init__.py  constants.py  feature_engineering_tools.py  training.py
utils/autoencoder/: Funcs.py  __init__.py
weights/: model_v2.pkl
