[tool.poetry]
name = "dnazyme"
version = "0.1.0"
description = ""
authors = ["nikolya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biopython = "^1.81"
matplotlib = "^3.7.2"
plotly = "^5.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
